# stoops

./: .gitignore  CLAUDE.md  FEATURES.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.claude/: CLAUDE.md
docs/: architecture.md  authority.md  claude-code-tmux-bridge.md  cli.md  engagement.md  opencode-session-detection.md
python/: pyproject.toml
python/src/stoops/: __init__.py
src/agent/: content-buffer.ts  engagement.ts  event-processor.ts  room-data-source.ts  sse-multiplexer.ts  types.ts
src/agent/mcp/: runtime.ts
src/cli/: index.ts  join.ts  serve.ts  tui.tsx
src/cli/claude/: run.ts  tmux-bridge.ts
src/cli/codex/: run.ts  tmux-bridge.ts
src/cli/opencode/: run.ts
src/core/: channel.ts  index.ts  names.ts  room.ts  storage.ts  types.ts
src/langgraph/: index.ts
tests/: codex-tmux-bridge.test.ts  engagement.test.ts  event-processor.test.ts  multiplexer.test.ts
typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
typescript/src/: index.ts
typescript/src/agent/: connection-registry.ts  engagement.ts  event-processor.ts  event-tracker.ts  index.ts  mcp-server.ts  multiplexer.ts  prompts.ts  ref-map.ts  remote-room-data-source.ts  runtime.ts  sse-multiplexer.ts  tool-handlers.ts  types.ts
typescript/src/claude/: index.ts  session.ts
typescript/tests/: engagement.test.ts  event-processor.test.ts  format-event.test.ts  integration.test.ts  multiplexer.test.ts  ref-map.test.ts  room.test.ts  session-claude.test.ts  session-langgraph.test.ts  tmux-bridge.test.ts  tool-handlers.test.ts
(+23 files in other folders)
